feat:added Kafka Cosumers and refactored code